fix: textarea overflow and button not being under it

--- a/css/character-count.css
+++ b/css/character-count.css
@@ -1,3 +1,7 @@
+textarea {
+  max-width: 100%;
+}
+
 #textarea-stats {
   > p {
     > span:first-child {
